agregando bootstrap y sass a el codigo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="https://i.pinimg.com/474x/b0/1b/1e/b01b1e1e5bb3f76fd5cea88f324c98b7--alan-taylor-thor.jpg" class="d-block w-100" alt="...">
+            <img src=""https://i.pinimg.com/474x/b0/1b/1e/b01b1e1e5bb3f76fd5cea88f324c98b7--alan-taylor-thor.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="..." class="d-block w-100" alt="...">
